force-app/main/default/objects/Bed_Availability__c/Bed_Availability__c.object-meta.xml
<CustomObject>
    <label>Bed Availability</label>
    <nameField>
        <label>Bed ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bed Availability</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>