force-app/main/default/objects/Bed_Availability__c/fields/Bed_ID__c.field-meta.xml
<CustomField>
    <fullName>Bed_ID__c</fullName>
    <label>Bed_ID</label>
    <type>AutoNumber</type>
</CustomField>