force-app/main/default/objects/Bed_Availability__c/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <label>Bed_Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>