force-app/main/default/objects/Bed_Availability__c/fields/bed_status__c.field-meta.xml
<CustomField>
    <fullName>bed_status__c</fullName>
    <label>bed_status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available, Confirmed, Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>