force-app/main/default/objects/Bed_Availability__c/fields/bed_status_c__c.field-meta.xml
<CustomField>
    <fullName>bed_status_c__c</fullName>
    <label>bed_status_c</label>
    <length>10</length>
    <type>Text</type>
</CustomField>