force-app/main/default/objects/Bed_Availability__c/fields/Patient_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Patient_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients</label>
    <referenceTo>Patients__c</referenceTo>
    <relationshipLabel>Bed Availability</relationshipLabel>
    <relationshipName>Bed_Availability</relationshipName>
    <type>Lookup</type>
</CustomField>