force-app/main/default/objects/Bed_Availability__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <length>50</length>
    <type>Text</type>
</CustomField>