force-app/main/default/objects/Bed_Availability__c/recordTypes/General_Ward.recordType-meta.xml
<RecordType>
    <fullName>General_Ward</fullName>
    <active>true</active>
    <description>Regular ward beds</description>
    <label>General Ward</label>
</RecordType>