force-app/main/default/objects/Bed_Availability__c/recordTypes/ICU.recordType-meta.xml
<RecordType>
    <fullName>ICU</fullName>
    <active>true</active>
    <description>ICU beds</description>
    <label>ICU</label>
</RecordType>