force-app/main/default/objects/Bed_Availability__c/validationRules/Validate_Bed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bed_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(bed_status__c, &quot;Occupied&quot;)</errorConditionFormula>
    <errorDisplayField>bed_status_c__c</errorDisplayField>
    <errorMessage>Cannot assign patient. Bed is already occupied</errorMessage>
</ValidationRule>